# WikiForge

./: README.md  pyproject.toml
.claude/skills/: wikiforge-ingest.md
src/wikiforge/: __init__.py  cli.py  compile.py  config.py  index.py  ingest.py  lint.py  llm.py  log.py  manifest.py  models.py  query.py  schema.py  vault.py
src/wikiforge/prompts/: compile.py  lint.py  query.py
tests/: conftest.py  test_compile.py  test_ingest.py  test_ingest_text.py  test_lint.py  test_log.py  test_manifest.py  test_query.py  test_schema.py  test_vault.py
